--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://emchigesheva.github.io/invoice/invoice-collection",
   "name": "json-server-heroku",
   "version": "1.0.0",
   "description": "Simple json-base database to deploy to Heroku",
   "main": "server.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -16,5 +19,8 @@
     "json-server": "^0.12.1",
     "moment": "^2.24.0",
     "node-json2html": "^1.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
