--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "homepage": "http://emchigesheva.github.io/invoice/invoice-collection",
-  "name": "json-server-heroku",
+  "name": "invoice-collection",
   "version": "1.0.0",
   "description": "Simple json-base database to deploy to Heroku",
-  "main": "server.js",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [
     "json-server,heroku, node, REST API"
@@ -16,7 +13,6 @@
   "author": "Jesper Orb",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.12.1",
     "moment": "^2.24.0",
     "node-json2html": "^1.2.0"
   },
